Wire bans, rich chat, advancements, entities, items and windows to the bridge